--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
+    "mocha": "^5.2.0",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.1",
     "uuid": "^3.2.1"
